Update Java heap options
Use the `-XX:InitialRAMPercentage` and `-XX:MaxRAMPercentage` JVM
options instead of calculating the heap size. Note that Java 8 seems to
require that the percentage has a decimal place.